force-app/main/default/objects/Case/fields/AMCategory__c.field-meta.xml
<CustomField>
    <fullName>AMCategory__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>What account specific problem does this issue relate to? Filled in by anyone who rises the issue</inlineHelpText>
    <label>AM Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account balance</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Change bank account information</fullName>
            </value>
            <value>
                <fullName>Change invoice</fullName>
            </value>
            <value>
                <fullName>Credits</fullName>
            </value>
            <value>
                <fullName>Customer referrals</fullName>
            </value>
            <value>
                <fullName>Damage Report</fullName>
            </value>
            <value>
                <fullName>De-escalation</fullName>
            </value>
            <value>
                <fullName>General data</fullName>
            </value>
            <value>
                <fullName>Rescissions</fullName>
            </value>
            <value>
                <fullName>Send out invoice</fullName>
            </value>
            <value>
                <fullName>Tax data</fullName>
            </value>
            <value>
                <fullName>Dunning</fullName>
            </value>
            <value>
                <fullName>Upselling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>