force-app/main/default/objects/Case/fields/Assign_Me__c.field-meta.xml
<CustomField>
    <fullName>Assign_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Me</label>
    <type>Checkbox</type>
</CustomField>