force-app/main/default/objects/Case/fields/Assign_to_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Queue__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>What team should take care of this ticket?</inlineHelpText>
    <label>Assign to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Customer_Success</fullName>
                <label>Customer Success</label>
            </value>
            <value>
                <fullName>Account_Specialists</fullName>
                <label>Account Specialists</label>
            </value>
            <value>
                <fullName>Tech_Support</fullName>
                <label>Tech Support</label>
            </value>
            <value>
                <fullName>Pay_Specialists</fullName>
                <label>Pay Specialists</label>
            </value>
            <value>
                <fullName>Nightowls</fullName>
            </value>
            <value>
                <fullName>Fiskalisierung</fullName>
            </value>
            <value>
                <fullName>MINI_incoming_Case_queue</fullName>
                <label>MINI incoming Case queue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>