force-app/main/default/objects/Case/fields/attachement_in_original_parent_case__c.field-meta.xml
<CustomField>
    <fullName>attachement_in_original_parent_case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CRMT-307</description>
    <inlineHelpText>Look the Parent Case to see the attachment and the Original Email</inlineHelpText>
    <label>attachement in original parent case</label>
    <type>Checkbox</type>
</CustomField>