force-app/main/default/objects/Case/fields/BackendLink__c.field-meta.xml
<CustomField>
    <fullName>BackendLink__c</fullName>
    <description>Stakeholder: Technical Support</description>
    <inlineHelpText>Is there a &quot;tools&quot; link to the venue that could be helpful to investigate, monitor or resolve the issue?</inlineHelpText>
    <label>Backend Link</label>
    <type>Url</type>
</CustomField>