force-app/main/default/objects/Case/fields/Black_Spot__c.field-meta.xml
<CustomField>
    <fullName>Black_Spot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Something Max did - better not ask...
Can be deleted, if he is not around anymore</description>
    <inlineHelpText>He is dead, Jim!</inlineHelpText>
    <label>Black Spot</label>
    <type>Checkbox</type>
</CustomField>