force-app/main/default/objects/Case/fields/Can_you_give_a_brief_summary_why__c.field-meta.xml
<CustomField>
    <fullName>Can_you_give_a_brief_summary_why__c</fullName>
    <label>Can you give a brief summary why?</label>
    <type>TextArea</type>
</CustomField>