force-app/main/default/objects/Case/fields/Cancellation_solution_count__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_solution_count__c</fullName>
    <label>Cancellation solution count</label>
    <summaryFilterItems>
        <field>CaseSolutionJunction__c.CaseSolution__c</field>
        <operation>equals</operation>
        <value>a021t00000E1Jn9AAF</value>
    </summaryFilterItems>
    <summaryForeignKey>CaseSolutionJunction__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>