force-app/main/default/objects/Case/fields/CardReaderID__c.field-meta.xml
<CustomField>
    <fullName>CardReaderID__c</fullName>
    <description>Stakeholder: Onboarding</description>
    <inlineHelpText>What is the card reader ID of the device affected by this issue?</inlineHelpText>
    <label>Card Reader ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>