force-app/main/default/objects/Case/fields/CaseReason__c.field-meta.xml
<CustomField>
    <fullName>CaseReason__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>Does this problem come from a lack of knowledge? Is it a setup question? Note: Please only use SOS if instructed</inlineHelpText>
    <label>Case Reason (custom)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubCategory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>How To</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Trouble</fullName>
            </value>
            <value>
                <fullName>Inadequate Info</fullName>
            </value>
            <value>
                <fullName>SOS</fullName>
            </value>
            <value>
                <fullName>Billing / Sales</fullName>
            </value>
            <value>
                <fullName>Replacements</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>