force-app/main/default/objects/Case/fields/CaseSolutionCount__c.field-meta.xml
<CustomField>
    <fullName>CaseSolutionCount__c</fullName>
    <label>Case Solution Count</label>
    <summaryForeignKey>CaseSolutionJunction__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>