force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>orderbird App</fullName>
            </value>
            <value>
                <fullName>my.orderbird</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Add-ons</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Pay</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
            <value>
                <fullName>unavailable</fullName>
            </value>
            <value>
                <fullName>Upselling</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>NEST Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>