force-app/main/default/objects/Case/fields/Closed_After_Hours__c.field-meta.xml
<CustomField>
    <fullName>Closed_After_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed After Hours</label>
    <type>Checkbox</type>
</CustomField>