force-app/main/default/objects/Case/fields/CommentMigrated__c.field-meta.xml
<CustomField>
    <fullName>CommentMigrated__c</fullName>
    <description>Stakeholder: CS // Custevent15 from Netsuite</description>
    <inlineHelpText>Migrate field, do not fill.</inlineHelpText>
    <label>Comment (Migrated)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>