force-app/main/default/objects/Case/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>What secondary component of our product is affected by this issue? Note: This field is dependent on the category field.</inlineHelpText>
    <label>Component</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubCategory__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>accumulated turnover (open/cleared)</fullName>
            </value>
            <value>
                <fullName>Address Information</fullName>
            </value>
            <value>
                <fullName>android</fullName>
            </value>
            <value>
                <fullName>Apple ID</fullName>
            </value>
            <value>
                <fullName>arrange items on orderpad</fullName>
            </value>
            <value>
                <fullName>asian character</fullName>
            </value>
            <value>
                <fullName>Available Devices</fullName>
            </value>
            <value>
                <fullName>Bank Details</fullName>
            </value>
            <value>
                <fullName>barcode scanner</fullName>
            </value>
            <value>
                <fullName>Base Router</fullName>
            </value>
            <value>
                <fullName>bigger buttons</fullName>
            </value>
            <value>
                <fullName>bill - bigger total</fullName>
            </value>
            <value>
                <fullName>bill has docket number</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>bills accessible after close</fullName>
            </value>
            <value>
                <fullName>Bill Template</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>call system with numbers (self service)</fullName>
            </value>
            <value>
                <fullName>card payment receipt</fullName>
            </value>
            <value>
                <fullName>Cardreader</fullName>
            </value>
            <value>
                <fullName>Cash Drawer</fullName>
            </value>
            <value>
                <fullName>chain store management</fullName>
            </value>
            <value>
                <fullName>change on bill</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Close Shift</fullName>
            </value>
            <value>
                <fullName>colourful buttons</fullName>
            </value>
            <value>
                <fullName>Concardis</fullName>
            </value>
            <value>
                <fullName>Copy Masterdata</fullName>
            </value>
            <value>
                <fullName>coupon integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>