force-app/main/default/objects/Case/fields/Contact_email_custom__c.field-meta.xml
<CustomField>
    <fullName>Contact_email_custom__c</fullName>
    <description>Field created to allow the collection of the contact email in the email alert.</description>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact email</label>
    <type>Text</type>
</CustomField>