force-app/main/default/objects/Case/fields/Contents__c.field-meta.xml
<CustomField>
    <fullName>Contents__c</fullName>
    <description>Stakeholder: unknown</description>
    <inlineHelpText>INPUT NEEDED</inlineHelpText>
    <label>Contents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main menu</fullName>
            </value>
            <value>
                <fullName>Orderpad</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Print jobs</fullName>
            </value>
            <value>
                <fullName>Settings</fullName>
            </value>
            <value>
                <fullName>Sales Dashboard</fullName>
            </value>
            <value>
                <fullName>Exports</fullName>
            </value>
            <value>
                <fullName>Invoices and Open Orders</fullName>
            </value>
            <value>
                <fullName>DATEV &amp; GDPdU</fullName>
            </value>
            <value>
                <fullName>Settings, bank details, Logo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>