force-app/main/default/objects/Case/fields/DevTeamIssue__c.field-meta.xml
<CustomField>
    <fullName>DevTeamIssue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: CS</description>
    <inlineHelpText>Does this issue require the assistance of a developer?</inlineHelpText>
    <label>Dev Team Issue</label>
    <type>Checkbox</type>
</CustomField>