force-app/main/default/objects/Case/fields/eb7__convId__c.field-meta.xml
<CustomField>
    <fullName>eb7__convId__c</fullName>
    <description>This value is set if this Salesforce Case is associated with an e-bot7 conversation. This allows the e-bot7 Message Center to load the conversation inside Salesforce</description>
    <label>e-bot7 Conv ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>