force-app/main/default/objects/Case/fields/First_Email_sent_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Email_sent_Date__c</fullName>
    <description>https://jira.orderbird.com/browse/SAL-1336</description>
    <label>First Email sent Date</label>
    <type>DateTime</type>
</CustomField>