force-app/main/default/objects/Case/fields/HardwareDevice__c.field-meta.xml
<CustomField>
    <fullName>HardwareDevice__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>Which device is affected by this issue?</inlineHelpText>
    <label>Hardware Device</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IssueType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Card Reader</fullName>
            </value>
            <value>
                <fullName>Cash Drawer</fullName>
            </value>
            <value>
                <fullName>iPad - Special Regulation</fullName>
            </value>
            <value>
                <fullName>iPad TM</fullName>
            </value>
            <value>
                <fullName>iPod</fullName>
            </value>
            <value>
                <fullName>Powerbank/ Cases</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Router</fullName>
            </value>
            <value>
                <fullName>Starter Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>