force-app/main/default/objects/Case/fields/Internal_NPS_calculator__c.field-meta.xml
<CustomField>
    <fullName>Internal_NPS_calculator__c</fullName>
    <formula>CASE(Sales_NPS_Internal__c ,
&apos;10&apos;, 100, 
&apos;9&apos;, 100, 
&apos;8&apos;, 0, 
&apos;7&apos;, 0, 
&apos;6&apos;, -100, 
&apos;5&apos;, -100, 
&apos;4&apos;, -100, 
&apos;3&apos;, -100, 
&apos;2&apos;, -100, 
&apos;1&apos;, -100, 
&apos;0&apos;, -100, 
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal NPS calculator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>