force-app/main/default/objects/Case/fields/IssueReason__c.field-meta.xml
<CustomField>
    <fullName>IssueReason__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>What caused this issue to raise?</inlineHelpText>
    <label>Issue Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>AMCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--</fullName>
            </value>
            <value>
                <fullName>Account period of service</fullName>
            </value>
            <value>
                <fullName>Terms and conditions</fullName>
            </value>
            <value>
                <fullName>Already fulfilled</fullName>
            </value>
            <value>
                <fullName>Broken Hardware &amp; Replacement</fullName>
            </value>
            <value>
                <fullName>Change not possible</fullName>
            </value>
            <value>
                <fullName>Change of name</fullName>
            </value>
            <value>
                <fullName>Checking conditions for referral</fullName>
            </value>
            <value>
                <fullName>Claim settled</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Complaint - accounting/ customer account</fullName>
            </value>
            <value>
                <fullName>Complaint against staff/ service complaint</fullName>
            </value>
            <value>
                <fullName>Complaint - product</fullName>
            </value>
            <value>
                <fullName>Conditions not met</fullName>
            </value>
            <value>
                <fullName>Credit not yet issued</fullName>
            </value>
            <value>
                <fullName>Credit not yet payed out</fullName>
            </value>
            <value>
                <fullName>Debt collection</fullName>
            </value>
            <value>
                <fullName>Delay due to customer</fullName>
            </value>
            <value>
                <fullName>Disclose account balance</fullName>
            </value>
            <value>
                <fullName>Double payment</fullName>
            </value>
            <value>
                <fullName>Missing Feature</fullName>
            </value>
            <value>
                <fullName>Enter VAT ID</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Finance period of service</fullName>
            </value>
            <value>
                <fullName>Incoming payments</fullName>
            </value>
            <value>
                <fullName>Insolvency</fullName>
            </value>
            <value>
                <fullName>Reliability Lacking</fullName>
            </value>
            <value>
                <fullName>Notification of claim - unavailable</fullName>
            </value>
            <value>
                <fullName>Owner Change</fullName>
            </value>
            <value>
                <fullName>Partner mgmt period of service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>