force-app/main/default/objects/Case/fields/IssueType__c.field-meta.xml
<CustomField>
    <fullName>IssueType__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>What is the issue about?</inlineHelpText>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>