force-app/main/default/objects/Case/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>Which item is affected by this issue? Multi-select picklist</inlineHelpText>
    <label>Item</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Card Reader</fullName>
            </value>
            <value>
                <fullName>Cash Drawer</fullName>
            </value>
            <value>
                <fullName>iPad - Special Regulation</fullName>
            </value>
            <value>
                <fullName>iPad TM</fullName>
            </value>
            <value>
                <fullName>Powerbank/ Cases</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Router</fullName>
            </value>
            <value>
                <fullName>Starter Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>