force-app/main/default/objects/Case/fields/Link_to_NS_Case__c.field-meta.xml
<CustomField>
    <fullName>Link_to_NS_Case__c</fullName>
    <formula>IF(!ISNULL(NetSuiteId__c),

HYPERLINK(&quot;https://system.eu2.netsuite.com/app/crm/support/supportcase.nl?id=&quot; &amp; RIGHT(NetSuiteId__c, LEN( NetSuiteId__c) - 4) &amp; &quot;&amp;whence=&quot;, &quot;Click here&quot;),

&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to NS Case</label>
    <type>Text</type>
</CustomField>