force-app/main/default/objects/Case/fields/LinkToGithubJIRA__c.field-meta.xml
<CustomField>
    <fullName>LinkToGithubJIRA__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>Is there a Jira/github link that could be helpful to investigate, monitor or resolve the issue?</inlineHelpText>
    <label>Link to Github/ JIRA</label>
    <type>Url</type>
</CustomField>