force-app/main/default/objects/Case/fields/lntcms__EngineeringReqNumber__c.field-meta.xml
<CustomField>
    <fullName>lntcms__EngineeringReqNumber__c</fullName>
    <inlineHelpText>Zuora field - purpose unclear!</inlineHelpText>
    <label>Engineering Req Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>