force-app/main/default/objects/Case/fields/LockCase__c.field-meta.xml
<CustomField>
    <fullName>LockCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder UNKOWN</description>
    <inlineHelpText>INPUT NEEDED</inlineHelpText>
    <label>LockCase</label>
    <type>Checkbox</type>
</CustomField>