force-app/main/default/objects/Case/fields/MenuDueOn__c.field-meta.xml
<CustomField>
    <fullName>MenuDueOn__c</fullName>
    <inlineHelpText>Due Date of the Menu Card</inlineHelpText>
    <label>Menu due on</label>
    <type>Date</type>
</CustomField>