force-app/main/default/objects/Case/fields/MenuSentOn__c.field-meta.xml
<CustomField>
    <fullName>MenuSentOn__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>When was the menu card sent?</inlineHelpText>
    <label>Menu sent on</label>
    <type>Date</type>
</CustomField>