force-app/main/default/objects/Case/fields/MINI_Device_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>MINI_Device_Serial_Number__c</fullName>
    <formula>Account.Serial_Number__c</formula>
    <inlineHelpText>This is the Serial Number of the Device Related with the MINI Account</inlineHelpText>
    <label>MINI Device Serial Number</label>
    <type>Text</type>
</CustomField>