force-app/main/default/objects/Case/fields/Missing_Data_BB_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Missing_Data_BB_Onboarding__c</fullName>
    <description>Stakeholder: MINI/Pay
 https://jira.orderbird.com/browse/CDS-2645</description>
    <inlineHelpText>Which data is still missing to complete Bambora onboarding? Field content gets included in email!</inlineHelpText>
    <label>Missing Data BB Onboarding</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>