force-app/main/default/objects/Case/fields/Missing_feature_comment__c.field-meta.xml
<CustomField>
    <fullName>Missing_feature_comment__c</fullName>
    <label>Missing feature comment</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>