force-app/main/default/objects/Case/fields/No_Survey__c.field-meta.xml
<CustomField>
    <fullName>No_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-1275</description>
    <inlineHelpText>Case does not send the Case Closed surveys. Only useable by Support Management</inlineHelpText>
    <label>No Survey</label>
    <type>Checkbox</type>
</CustomField>