force-app/main/default/objects/Case/fields/Number_of_Emails_sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Emails_sent__c</fullName>
    <description>https://jira.orderbird.com/browse/SAL-1335</description>
    <label>Number of Emails sent</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>