force-app/main/default/objects/Case/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <description>Stakeholder: Support (Wegener)</description>
    <formula>TEXT(Account.Onboard_Status__c)</formula>
    <inlineHelpText>What is the Onboarding status of the referred lead? Requested for case overview in Service Console</inlineHelpText>
    <label>Onboarding Status</label>
    <type>Text</type>
</CustomField>