force-app/main/default/objects/Case/fields/Onboarding_Type__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Type__c</fullName>
    <description>https://jira.orderbird.com/browse/SAL-1318</description>
    <label>Onboarding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding Basic</fullName>
            </value>
            <value>
                <fullName>Resmio Onboarding</fullName>
            </value>
            <value>
                <fullName>Resmio Activation Only</fullName>
            </value>
            <value>
                <fullName>Onboarding Premium</fullName>
                <isActive>false</isActive>
                <label>Onboarding Premium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>