force-app/main/default/objects/Case/fields/Online_Handover_ebot7__c.field-meta.xml
<CustomField>
    <fullName>Online_Handover_ebot7__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true every time a conversation is handover from the bot to the an agent.</description>
    <label>Online Handover</label>
    <type>Checkbox</type>
</CustomField>