force-app/main/default/objects/Case/fields/Open_Issues_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Issues_Count__c</fullName>
    <description>Stakeholder: CS with NEST (identify workflow behind it!)</description>
    <inlineHelpText>How many issues does this case contain?</inlineHelpText>
    <label>Open Issues Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>