force-app/main/default/objects/Case/fields/Opened_After_Hours__c.field-meta.xml
<CustomField>
    <fullName>Opened_After_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opened After Hours</label>
    <type>Checkbox</type>
</CustomField>