force-app/main/default/objects/Case/fields/Pay_Status__c.field-meta.xml
<CustomField>
    <fullName>Pay_Status__c</fullName>
    <formula>TEXT(Account.Pay_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Status</label>
    <type>Text</type>
</CustomField>