force-app/main/default/objects/Case/fields/Payworks__c.field-meta.xml
<CustomField>
    <fullName>Payworks__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>Is there a &quot;payworks&quot; link that could be helpful to investigate, monitor or resolve the issue?</inlineHelpText>
    <label>Payworks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>