force-app/main/default/objects/Case/fields/Postident__c.field-meta.xml
<CustomField>
    <fullName>Postident__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: CS</description>
    <inlineHelpText>Was the post-identification completed and successful?</inlineHelpText>
    <label>Postident</label>
    <type>Checkbox</type>
</CustomField>