force-app/main/default/objects/Case/fields/Printers__c.field-meta.xml
<CustomField>
    <fullName>Printers__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>Additional information about the printer</inlineHelpText>
    <label>Printers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>